--- a/SoxDashboard 2/src/app/app.component.html
+++ b/SoxDashboard 2/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="navbar"><div style="width: 30%; float:left;"> <img src="assets/graphics/enco-logo.png"> &nbsp; SOX Dashboard</div>
-  <div style="float:left; width: 50%;"><div style="float:left;">Project: <select class="select-menue"><option value="" selected="">Automatic Spoiler</option>
-    <option value="">Semiconductor</option><option value="">Gearbox</option></select> </div> </div>
-  <app-project></app-project>
+  <div style="float:left; width: 50%;"><div style="float:left;">Project:<app-project></app-project>  </div> </div>
   <div style="margin-left: 0; width: 20%;">
     Config
   </div>
