--- a/SoxDashboard 2/src/app/app.component.html
+++ b/SoxDashboard 2/src/app/app.component.html
@@ -105,6 +105,7 @@
         </table>
       </div>
     </div>
+  <app-task class="card-middle"></app-task>
 
     <div class="card-small">
       <div class="card-topbar"><p>Overdue Tasks</p><div class="card-icons"></div></div>
